input/files/examples/errors/JavaExampleError002.java
package errors;

public class JavaExampleError002 {
	int private test; // should be private int
}